--- a/index.html
+++ b/index.html
@@ -6,6 +6,206 @@
     <title>Simply chocolate</title>
   </head>
   <body>
-    <header>Simply Chocolate</header>
+    <header>
+      <nav>
+        <a href="./index.html">SIMPLY CHOCOLATE</a>
+        <!-- add icon -->
+        <ul>
+          <li>
+            <a href="./index.html">Home</a>
+          </li>
+          <li>
+            <a href="#how-made">How it’s made?</a>
+          </li>
+          <li>
+            <a href="#reviews">Chocolate is loved</a>
+          </li>
+        </ul>
+      </nav>
+      <!-- add icons -->
+    </header>
+    <main>
+      <section>
+        <h1>
+          Treat yourself or a loved one to our finest ingredients for a moment
+          of pure delight!
+        </h1>
+        <button type="button">Buy now</button>
+        <a href="#how-made">How it’s made</a>
+        <a href="#benefits">scroll down</a>
+        <!-- add icon -->
+      </section>
+      <section id="benefits">
+        <h2>Our benefits</h2>
+        <!-- add icon for each item list -->
+        <ul>
+          <li>
+            <h3>Unsurpassed taste</h3>
+            <p>
+              Crafted with the finest quality cocoa beans and a dedication to
+              perfection, each bite is a decadent experience that simply cannot
+              be matched. Savor the richness and complexity of our Unsurpassed
+              Taste and discover a new level of chocolate bliss.
+            </p>
+          </li>
+          <li>
+            <h3>Affordable price</h3>
+            <p>
+              Indulge in high-quality chocolate without breaking the bank with
+              Simply Chocolate's selection of affordable treats. Enjoy
+              mouth-watering truffles and velvety chocolate bars without
+              sacrificing taste or quality. Browse our selection and indulge in
+              affordable luxury today.
+            </p>
+          </li>
+          <li>
+            <h3>Own production</h3>
+            <p>
+              We take pride in our own production process, ensuring that every
+              step is carefully crafted to perfection. From selecting the finest
+              ingredients to handcrafting each piece, our attention to detail is
+              evident in every bite.
+            </p>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h2>IT ALL ADDS UP TO ONE EXCEPTIONAL TASTE SENSATION</h2>
+        <p>
+          At Simply Chocolate, we believe that the secret to exceptional
+          chocolate is in the details. From the sourcing of the finest
+          ingredients to the careful crafting of each individual piece, every
+          step of our process adds up to one exceptional taste sensation.
+        </p>
+        <ul>
+          <li>
+            <img
+              src="./images/chocolate.png"
+              alt="Milk Chocolate"
+              width="206"
+              height="160"
+            />
+            <h3>mILK CHOCOLATE</h3>
+          </li>
+          <li>
+            <img src="./images/milk.png" alt="Milk" width="206" height="160" />
+            <h3>Milk</h3>
+          </li>
+          <li>
+            <img src="./images/nuts.png" alt="Nuts" width="206" height="160" />
+            <h3>nuts</h3>
+          </li>
+          <li>
+            <img
+              src="./images/cocoa-beans.png"
+              alt="Chocolate beans"
+              width="206"
+              height="160"
+            />
+            <h3>sEMI - SWEET CHOCOLATE</h3>
+          </li>
+        </ul>
+      </section>
+      <section id="how-made">
+        <h2>hOW IT’S made?</h2>
+        <img
+          src="./images/chocolate-cooking.jpg"
+          alt="Chocolate cooking"
+          width="600"
+          height="400"
+        />
+        <h3>
+          Try our chocolates today and discover the perfect balance of flavor
+        </h3>
+        <ul>
+          <li>
+            Heat the milk in a saucepan without bringing it to a boil. Add sugar
+            and cocoa powder.
+          </li>
+          <li>
+            At the same time, prepare a water bath. Melt the butter on it.
+          </li>
+          <li>
+            "Mix" the milk mixture and already liquid butter. Mix thoroughly
+            with a silicone spatula so that the mass becomes uniform and silky.
+          </li>
+          <li>Heat the mixture over low heat, letting it barely boil.</li>
+          <li>
+            Pour the chocolate into special containers (can be replaced with ice
+            molds). Allow to cool and harden.
+          </li>
+        </ul>
+      </section>
+      <section id="reviews">
+        <h2>chocolate is loved</h2>
+        <ul>
+          <li>
+            <img
+              src="./images/victoria.png"
+              alt="Victoria Dobrzhanska avatar"
+              width="80"
+              height="80"
+            />
+            <h3>Victoria Dobrzhanska</h3>
+            <p>
+              I love this chocolate bar. Perfect combination of light crispy
+              wafer, covered in a thin layer chocolate.
+            </p>
+          </li>
+          <li>
+            <img
+              src="./images/nazar.png"
+              alt="Nazar Babenko avatar"
+              width="80"
+              height="80"
+            />
+            <h3>Nazar Babenko</h3>
+            <p>
+              This chocolate confection is a delight! A delight! The wafer is
+              light and crisp, the hazelnut cream is smooth, and the chocolate
+              is good.
+            </p>
+          </li>
+          <li>
+            <img
+              src="./images/olena.png"
+              alt="Olena Kampusch avatar"
+              width="80"
+              height="80"
+            />
+            <h3>Olena Kampusch</h3>
+            <p>
+              Chocolate is a family favourite treat. Love the delicious smooth
+              chocolate and the creaminess inside. The wafer is soft but
+              crunchy.
+            </p>
+          </li>
+        </ul>
+        <button type="button">Leave a review</button>
+      </section>
+    </main>
+    <footer>
+      <h2>Chocolate a delicious cure for a bad day</h2>
+      <address>
+        <p>Contact us</p>
+        <ul>
+          <li>
+            <a href="tel:+380684439426">+380 (68) 443-94-26</a>
+          </li>
+          <li>
+            <a href="mailto:simplycthoc@gmail.com">simplycthoc@gmail.com</a>
+          </li>
+        </ul>
+      </address>
+      <ul>
+        <li><a href="./index.html">Home</a></li>
+        <li><a href="#how-made">How it’s made?</a></li>
+        <li><a href="#reviews">Chocolate is loved</a></li>
+      </ul>
+      <form>
+        <input type="text" placeholder="Enter your email" />
+        <button type="submit">Subscribe</button>
+      </form>
+    </footer>
   </body>
 </html>
