--- a/index.html
+++ b/index.html
@@ -4,33 +4,46 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Simply chocolate</title>
+    <!-- Fonts link -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,500;0,600;0,700;1,700&display=swap"
+      rel="stylesheet"
+    />
+    <!-- Modern normalize link -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
+    />
+    <!-- CSS link -->
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <header>
       <nav>
-        <a href="./index.html">SIMPLY CHOCOLATE</a>
+        <a href="./index.html" class="logo-link">
+          <span class="logo-link-italic">SIMPLY</span> CHOCOLATE
+        </a>
         <!-- add icon -->
         <ul>
           <li>
-            <a href="./index.html">Home</a>
+            <a href="#how-made" class="nav-link dark-text">How it’s made?</a>
           </li>
           <li>
-            <a href="#how-made">How it’s made?</a>
-          </li>
-          <li>
-            <a href="#reviews">Chocolate is loved</a>
+            <a href="#reviews" class="nav-link dark-text">Chocolate is loved</a>
           </li>
         </ul>
       </nav>
       <!-- add icons -->
     </header>
     <main>
-      <section>
-        <h1>
+      <section class="main-section">
+        <h1 class="page-title">
           Treat yourself or a loved one to our finest ingredients for a moment
           of pure delight!
         </h1>
-        <button type="button">Buy now</button>
+        <button type="button" class="main-section-btn">Buy now</button>
         <a href="#how-made">How it’s made</a>
         <a href="#benefits">scroll down</a>
         <!-- add icon -->
@@ -184,27 +197,40 @@
         <button type="button">Leave a review</button>
       </section>
     </main>
-    <footer>
-      <h2>Chocolate a delicious cure for a bad day</h2>
+    <footer class="footer">
+      <h2 class="footer-title">
+        <span class="footer-title-span">Chocolate</span> a delicious cure for a
+        bad day
+      </h2>
       <address>
-        <p>Contact us</p>
+        <p class="address-title">Contact us</p>
         <ul>
           <li>
-            <a href="tel:+380684439426">+380 (68) 443-94-26</a>
+            <a href="tel:+380684439426" class="address-link white-text"
+              >+380 (68) 443-94-26</a
+            >
           </li>
           <li>
-            <a href="mailto:simplycthoc@gmail.com">simplycthoc@gmail.com</a>
+            <a
+              href="mailto:simplycthoc@gmail.com"
+              class="address-link white-text"
+              >simplycthoc@gmail.com</a
+            >
           </li>
         </ul>
       </address>
       <ul>
-        <li><a href="./index.html">Home</a></li>
-        <li><a href="#how-made">How it’s made?</a></li>
-        <li><a href="#reviews">Chocolate is loved</a></li>
+        <li><a href="./index.html" class="nav-link white-text">Home</a></li>
+        <li>
+          <a href="#how-made" class="nav-link white-text">How it’s made?</a>
+        </li>
+        <li>
+          <a href="#reviews" class="nav-link white-text">Chocolate is loved</a>
+        </li>
       </ul>
       <form>
         <input type="text" placeholder="Enter your email" />
-        <button type="submit">Subscribe</button>
+        <button type="submit" class="footer-btn">Subscribe</button>
       </form>
     </footer>
   </body>
